# privseg

./: .gitignore  README.md  pyproject.toml
src/: compare_models.py  dataset.py  inference.py  inference_mask2former.py  model.py  model_mask2former.py  train.py  train_mask2former.py
