[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privseg"
version = "0.1.0"
description = "Medical image segmentation using deep learning models for skin lesion analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Author", email = "author@example.com"}
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=9.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "typos>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/privseg"
Repository = "https://github.com/yourusername/privseg.git"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"
